fix(ci): action fix -run

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
-        run: npm install && npm run build:dev
+      - run: npm install && npm run build:dev
 
       # 2、部署到 vercel
 #       - name: Deploy
