--- a/package.json
+++ b/package.json
@@ -78,6 +78,8 @@
     ]
   },
   "dependencies": {
-    "vue": "^2.6.14"
+    "normalize.css": "^8.0.1",
+    "vue": "^2.6.14",
+    "vue-router": "^3.6.5"
   }
 }
