--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [ 20.x ]
+        node-version: [ 20.11.0 ]
     steps:
       # 1、生成静态文件
       - uses: actions/checkout@v2
@@ -25,7 +25,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
-      - run: npm install && npm run build:dev
+      - run: npm ci && npm run build:dev
 
       # 2、部署到 vercel
 #       - name: Deploy
