chore(package.json): 修改package.json

--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
       "prettier --write",
       "eslint --fix"
     ],
-    "*.{vue}": [
+    "*.vue": [
       "prettier --write",
       "eslint --parser vue-eslint-parser --fix"
     ],
