--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "stylelint-less": "^3.0.1",
     "stylelint-order": "^6.0.4",
     "thread-loader": "^4.0.2",
+    "vercel": "^33.4.1",
     "vue-eslint-parser": "^9.4.0",
     "vue-loader": "^15.11.1",
     "vue-template-compiler": "^2.6.14",
