--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,8 +25,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
-      - run: npm ci && npm run build:dev
-
+        run: npm ci && npm run build:dev
       # 2、部署到 vercel
       - name: Deploy
         run: npx vercel --token ${VERCEL_TOKEN} --prod
