--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,10 +25,9 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
-        run: npm ci && npm run build:dev
-      # 2、部署到 vercel
-      - name: Deploy
-        run: npx vercel --token ${VERCEL_TOKEN} --prod
+      - run: npm ci && npm run build:dev
+      # 部署到vercel
+      - run: npx vercel --token ${VERCEL_TOKEN} --prod
         env:
           VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
           VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
